--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "leaflet": "^1.9.4",
         "oh-vue-icons": "^1.0.0-rc3",
         "sweetalert2": "^11.10.6"
     }
